# cellular

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
src/: cli.rs  image_manip.rs  lib.rs  main.rs  prog.rs
src/image_manip/: bitmap.rs
tests/: image_manip.rs  performance_graphs.rs
