[package]
name = "ca_110"
version = "0.1.0"
authors = ["W-A-James <wajames@princeton.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.11.1"
clap = "2.33.3"
rand = "0.7.3"
log = "0.4.11"
env_logger = "0.8.2"
progress = "0.2"
