[package]
name = "cellular"
version = "0.1.0"
authors = ["W-A-James <wajames@princeton.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.11.2"
gif-dispose = "3.1.0"
clap = "2.33.3"
rand = "0.7.3"
log = "0.4.11"
simple_logger = "1.11.0"
progress = "0.2"
bit-vec = "0.6.3"
