[package]
name = "cellular"
version = "0.1.0"
authors = ["W-A-James <wajames2022@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple command-line based cellular automaton animation creator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.11.2"
gif-dispose = "3.1.0"
clap = "2.33.3"
rand = "0.7.3"
indicatif = "0.16.1"
bit-vec = "0.6.3"

[dev-dependencies]
plotters = "^0.3.1"
log = "0.4.11"
simple_logger = "1.11.0"
csv = "1.1.6"
serde = "1.0.126"
